# ElevenLabs-x-a16z-WW-Hackathon

./: .gitignore  DEMO.md  README.md  analysis_output.json  app.js  app.py  knowledge_extender.py  main.py  perplexity_response_20250223_101103.txt  perplexity_response_20250223_101359.txt  perplexity_response_20250223_102123.txt  perplexity_response_20250223_102854.txt  perplexity_response_20250223_103106.txt  perplexity_response_20250223_103643.txt  perplexity_response_20250223_113558.txt  perplexity_response_20250223_124012.txt  perplexity_response_20250223_125531.txt  perplexity_response_20250223_125705.txt  pyproject.toml  transcript.txt
backend/: README.md  app.py  knowledge_extender.py  main.py  pyproject.toml  search_agent.py  searcher.py
backend/static/: style.css
backend/templates/: index.html
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
static/: app.js  style.css
templates/: index.html
