[project]
name = "elevenlabs-x-a16z-ww-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergio",email = "speschiera@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.63.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
