[tool.poetry]
name = "backend"
version = "0.1.0"
description = "..."
authors = ["Your Name <you@example.com>"]

# Disable Poetry packaging for local code (so you won't need a 'backend/' folder with __init__.py).
# This tells Poetry: "Just manage dependencies; do not treat this as an installable package."
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langgraph = "^0.2.74"
langchain = "^0.3.19"
spacy = "^3.8.4"
typing-extensions = "^4.12.2"
langchain-openai = "^0.3.6"
python-dotenv = "^1.0.1"
pandas = "^2.0.2"
numpy = "^1.26.4"
openai = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
