[tool.poetry]
name = "ElevenLabs-x-a16z-WW-Hackathon"
version = "0.1.0"
description = "Local STT with faster-whisper, OpenAI relevancy, Perplexity search"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
python-dotenv = "^1.0.1"
pandas = "^2.0.2"
numpy = "^1.26.4"
elevenlabs = "^1.51.0"
requests = "^2.32.3"
openai = "^1.12.0"
faster-whisper = "^0.7.1"  # For local STT

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
